# parser

./: .env.example  .gitignore  alembic.ini  ask.py  ingest.py  parser_description_1.md  preview_source.py  pyproject.toml  readme.md  requirements.txt
agent/: __init__.py  __main__.py  graph.py  prompts.py  run.py  state.py  tender_api.py  tracing.py
agent/examples/: criteria_basic.json  result.json
agent/nodes/: criteria.py  fetch_meta.py  merge.py  table.py
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  router.py
app/clients/: __init__.py  http_proxy.py  llm_client.py  tracing.py
app/core/: config.py  logging.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  api_usage.py  document.py  document_map.py  parse_metric.py  passport.py  pipeline_job.py  tender.py
app/repositories/: __init__.py  _utils.py  api_usage.py  document_maps.py  documents.py  jobs.py  parse_metrics.py  passports.py  tenders.py
app/schemas/: __init__.py  manifest.py
app/services/: __init__.py  downloader.py  (+8 more)
data/: index.json
migrations/: 001_initial.sql  002_add_total_cost.sql
parser_service/: __init__.py  jobs.py  main.py  routes.py  schemas.py  source_renderer.py
tender_tools/: __init__.py  additional_documents.py  answer_generator.py  config.py  context_assembler.py  db.py  downloader.py  embedding_client.py  extractor.py  http_proxy.py  hybrid_search.py  indexer.py  llm_client.py  ocr_processor.py  passport.py  pipeline.py  question_router.py  storage.py
tests/: test_smoke.py
(+820 files in other folders)
