[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tender-parser-service"
version = "0.1.0"
description = "FastAPI-сервис скачивания, распаковки, парсинга и подготовки тендерной документации"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
